# SubStream-Protocol-Backend

./: .env.example  .env.tracing.example  005_create_soroban_events_archive.sql  CHURN_RISK_IMPLEMENTATION.md  DISASTER_RECOVERY.md  DISTRIBUTED_TRACING_GUIDE.md  DISTRIBUTED_TRACING_IMPLEMENTATION_SUMMARY.md  HPA_IMPLEMENTATION_PR_DESCRIPTION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  MAINNET_READINESS_ASSESSMENT.md  PULL_PAYMENT_CRON_SCHEDULER_PR_DESCRIPTION.md  README.md  RECONCILIATION_IMPLEMENTATION_SUMMARY.md  RECONCILIATION_WORKER_README.md  SCHOLARSHIP_CONTRACT_IMPLEMENTATION.md  SECURITY_PR_DESCRIPTION.md  TRACING_DEPLOYMENT_GUIDE.md  TRACING_INTEGRATION_CHECKLIST.md  TRACING_QUICK_START.md  TRACING_README.md  ZERO_DOWNTIME_MIGRATION_GUIDE.md  appDatabase.js  changes.patch  cronService.js  fix-db.js  index.js  knexfile.js  package-lock.json  package.json  reconciliationWorker.test.js  sanctionsScreening.test.js  seasonalPause.test.js  sorobanEventArchiveService.js  sorobanEventArchiveService.test.js  test-cors.js  test-security-implementations.js  test_churn_risk_system.js  tsconfig.json  worker.js
contracts/scholarship/: .gitignore  Cargo.toml  README.md
contracts/scholarship/src/: gas_bounds.rs  lib.rs
contracts/scholarship/tests/: integration_test.rs
docs/: HPA_DEVOPS_RUNBOOK.md
k8s/: deployment.yaml  prometheus-external-metrics.yaml  redis-metrics-adapter.yaml  worker-deployment.yaml  worker-hpa.yaml
load-test/: mainnet-load-test.js
middleware/: auth.js  merchantConfigRbac.js  sanctionsBlock.js  tierAuth.js
routes/: merchants.js  (+9 more)
(+122 files in other folders)
