[package]
name = "scholarship"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "20", features = ["alloc"] }
soroban-sdk-macros = "20"

[dev-dependencies]
soroban-sdk = { version = "20", features = ["alloc"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.release-with-logs]
inherits = "release"
debug = true
